deploy/k8s/teamcard-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: teamcard
  labels:
    name: teamcard
